# manadoc

./: .editorconfig  .pre-commit-config.yaml  LICENSE  aliases.sh  contributing.md  manage.py  pyproject.toml  pyrightconfig.json  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: black.yml  django.yml  flake8.yml  pyright.yml  tests.yml
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_document_reviewers_alter_document_author.py
core/models/: __init__.py  document.py  user.py
core/templates/core/: base.html  create.html  create_document.html  delete_document.html  index.html  login.html
core/tests/: __init__.py
core/views/: __init__.py  create.py
manadoc/: asgi.py  settings.py  urls.py  wsgi.py
shared/: __init__.py
tests/: test_basic_functionality.py  test_basic_functions.py
