[project]
name = "manadoc"
version = "0.1.0"
description = "manadoc is a controlled documentation system for small businesses."
authors = [{ name = "Hanpari" }]
license = "MIT"

[tool.flake8]
exclude = [".venv", "migrations", "__pycache__", "settings.py"]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
